--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        it's all in the head
-        <title> Deze titel verschijnt in de tab van je browser </title>
+                <title> eerste html opdracht </title>
     </head>
     <body>
-       nobody tell me to use my head
-    </body>
+      <h1>Daar is'tie dan!!</h1> 
+    <h2>Be ready for more!</h2>
+     <hr/>
+<p>Ik zet hier de eerste schreden op het pad van HTML code schrijven en daarmee pagina's maken</p> 
+ </body>
 </html>
